fix: add sync to map to fix modified map error
Signed-off-by: Apoorva Srinivas Appadoo <apoorva-srinivas.appadoo@etu.univ-cotedazur.fr>